syntax="proto3";

package com.test.entity;

option java_package="com.pccc.touda.test.grpc.pb.entity";
option java_multiple_files=true;

message UserRequest{
    string id=1;
    string name=2;
    string phone=3;
    string sex=4;
    repeated Friend friends=5;
}

message Friend{
    string name=1;
}